[package]
name = "istring"
version = "0.4.2"
edition = "2021"
authors = ["Sebastian Köln <s3bk@protonmail.com>"]
description = "A replacement for String that allows storing short strings of length up to sizeof<String>() - 1 without a heap allocation"
categories = []
license = "MIT"
homepage = "https://github.com/s3bk/istring"
repository = "https://github.com/s3bk/istring"
keywords = ["string", "inline", "no_std"]

[features]
size = ["datasize"]
serialize = ["serde"]
std = []
rkyv = ["dep:rkyv", "dep:rancor"]
ts = ["dep:ts-rs", "std"]

[dependencies.datasize]
version = "0.2"
optional = true

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.rkyv]
version = "0.8"
optional = true
default-features = false

[dependencies.rancor]
version = "0.1"
optional = true

[dependencies.ts-rs]
version = "10.0"
optional = true
