[package]
name = "istring"
version = "0.4.7"
edition = "2021"
authors = ["Sebastian Köln <s3bk@protonmail.com>"]
description = "A replacement for String that allows storing short strings of length up to sizeof<String>() - 1 without a heap allocation"
categories = []
license = "MIT"
homepage = "https://github.com/s3bk/istring"
repository = "https://github.com/s3bk/istring"
keywords = ["string", "inline", "no_std"]

[features]
size = ["dep:datasize"]
serde = ["dep:serde"]
serialize = ["serde"]
std = []
rkyv = ["dep:rkyv", "dep:rancor"]
ts = ["dep:ts-rs", "std"]
bincode = ["dep:bincode"]
bincode-next = ["dep:bincode-next"]

[dependencies.datasize]
version = "0.2"
optional = true

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.rkyv]
version = "0.8"
optional = true
default-features = false

[dependencies.rancor]
version = "0.1"
optional = true

[dependencies.ts-rs]
version = "11.0"
optional = true

[dependencies.bincode]
version = "2.0.1"
optional = true

[dependencies.bincode-next]
version = "2.1.0"
optional = true
